--- a/css/device-style.css
+++ b/css/device-style.css
@@ -1,17 +1,20 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
-body {
-	
+body {	
+	background: #ffffff;
+	min-width: 1160px;
+
 	font-size: 15px;
 	color: #000000;
 	font-weight: normal;
-	font-family: "OpenSans" Arial sans-serif;
-	line-height: 20px;
-	background-color: green;
+	font-family: "OpenSans", Arial, sans-serif;
+	line-height: 20px;	
 }
+
 
 .logo-top-catalog a {
 	font-size: 48px;
@@ -38,7 +41,7 @@ h2 .info-title {
 	line-height: 1;
 }
 
-.info-left p,
+/*.info-left p,
 .info-right p,
 p .phon,
 .navigation-top {	
@@ -46,7 +49,7 @@ p .phon,
 	color: #464646;
 	font-weight: normal;
 	font-family: "OpenSans" Arial sans-serif;
-	line-height: 20px;
+	line-height: 20px;*/
 }
 
 .clearfix::after {
@@ -56,11 +59,10 @@ p .phon,
 }
 
 .container {
-	width: 1160px;
+	width: 1200px;
 	margin: 0 auto;
-	padding: 0 140px;
+	padding: 0 20px;
 	background: url(../img/background.png) repeat;
-
 }
 
 .header {
