--- a/css/device-style.css
+++ b/css/device-style.css
@@ -414,7 +414,7 @@ body {
 	width: 200px;
 	margin-right: 40px;
 }
-
+/*
 .sliders {	
 	position: relative;	
 	margin-top: -110px;
@@ -613,18 +613,15 @@ body {
 }
 
 .feature-value-1 {
-	width: 160px;
-	/*letter-spacing: 2px;	*/
+	width: 160px;	
 }
 
 .feature-value-2 {
-	width: 140px;
-	/*letter-spacing: 2px;*/
+	width: 140px;	
 }
 
 .feature-value-3 {
 	width: 180px;	
-	/*letter-spacing: 2px;*/
 }
 
 .feature-name {
@@ -648,7 +645,7 @@ body {
 .feature-name-3 {
 	width: 180px;	
 }
-
+*/
 .product-section-list {
 	display: flex;
 	justify-content: space-between;	
@@ -725,7 +722,8 @@ body {
 
 .slider2 {	
 	display: flex;
-	justify-content: space-between;		
+	justify-content: space-between;	
+	position: relative;
 	min-height: 288px;
 	background: url("../img/background-slider2.jpg") repeat;	
 	margin-left: -9999px;
@@ -735,58 +733,58 @@ body {
 	padding-right: 9999px;  
 }
 
+.slider2-controls label {
+	position: relative;
+	min-width: 160px;	
+	margin-bottom: 30px;
+	cursor: pointer;
+
+	font-size: 18px;
+	color: #000;
+	font-family: "Gilroy", "Arial", sans-serif;
+	font-weight: bold;
+	text-transform: uppercase;
+	line-height: 2;
+	text-align: center;	
+	letter-spacing: 3px;
+	z-index: 1;  
+	border: none;
+	text-decoration: none;
+	background-color: transparent; 
+}
+
+.slider2-control::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+	width: 100%;
+	height: 8px;
+	background-color: #f0c52e;
+	z-index: -1;
+	transition: 0.3s linear;
+	border: none;
+}
+
+.slider2-control:hover::before {
+	height: 100%;  
+}
+
+.slider2 > input[type="radio"] {
+	display: none;
+}
 .slider2-controls {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
 	position: relative;
 	width: 300px;
-	margin-top: -20px;	
-}
-
-.slider2-controls input[type=radio] {
-	/*display: none;*/
-}
-
-/*.btn.slider-control {
-	min-width: 160px;	
-	margin-bottom: 30px;	
-}
-
-
-#slider2-btn-1:checked ~ .slider-controls label[for="btn-1"],
-#slider2-btn-2:checked ~ .slider-controls label[for="btn-2"],
-#slider2-btn-3:checked ~ .slider-controls label[for="btn-3"] { 
-	color: #f7e184;
-}
-
-#slider2-btn-1:checked ~ .slider-controls label[for="btn-1"]::before,
-#slider2-btn-2:checked ~ .slider-controls label[for="btn-2"]::before,
-#slider2-btn-3:checked ~ .slider-controls label[for="btn-3"]::before { 
-	width: 176%;  
-	background-color: #000; 	
-	height: 100%;
-}
-
-
-
-/.slider2-slide {
-	display: none; 
-}
-
-
-
-#slider2-btn-1:checked ~ .slider2-slide:nth-child(1) { 
-    display: block;
-}
-#slider2-btn-2:checked ~ .slider2-slide:nth-child(2) { 
-    display: block;
-}
-#slider2-btn-3:checked ~ .slider2-slide:nth-child(3) { 
-    display: block;
+	margin-top: -20px;
+	align-items: flex-start;
 }
 
 .slider2-controls::after {		/*Вертикальная линия*/
+	content: "";
 	position: absolute;
 	top: -80px;
 	left: 278px;
@@ -795,15 +793,48 @@ body {
 	background: #000;
 }		
 
+#slider2-btn-1:checked ~ .slider2-controls label[for="slider2-btn-1"] .slider2-control::before,
+#slider2-btn-2:checked ~ .slider2-controls label[for="slider2-btn-2"] .slider2-control::before,
+#slider2-btn-3:checked ~ .slider2-controls label[for="slider2-btn-3"] .slider2-control::before {
+	width: 176%;  
+	height: 100%;
+	background-color: #000; 
+} 
+#slider2-btn-1:checked ~ .slider2-controls label[for="slider2-btn-1"],
+#slider2-btn-2:checked ~ .slider2-controls label[for="slider2-btn-2"],
+#slider2-btn-3:checked ~ .slider2-controls label[for="slider2-btn-3"] {
+	color: #f7e184;
+}
+
+.slider2-slides {
+	position: relative;	
+	width: 760px;	
+	margin-top: -18px;	
+}	
 
 .slider2-slide {
-	position: relative;
-	width: 760px;
-	padding-right: 320px;
-	margin-top: -18px;
+	position: absolute;
 	text-align: left;
-	line-height: 30px;	
-	overflow: hidden;	
+	line-height: 30px;
+	padding-right: 320px;
+	left: 0;
+	top: 0;	
+}
+
+.slider2-slide {
+	display: none;
+}
+
+#slider2-btn-1:checked ~ .slider2-slides .slider2-slide:nth-child(1) {
+	display: block; 
+}
+
+#slider2-btn-2:checked ~ .slider2-slides .slider2-slide:nth-child(2) {
+	display: block; 
+}
+
+#slider2-btn-3:checked ~ .slider2-slides .slider2-slide:nth-child(3) {
+	display: block; 
 }
 
 .slider2-title {
@@ -825,12 +856,10 @@ body {
 	width: 180px;
 	height: 210px;
 	top: 0;
-	right: -300px;
-	z-index: 10;			
+	right: 0;			
 }
 
-.slider2-slides:nth-child(1)::after {
-	background: red;
+.slider2-slide:nth-child(1)::after {
 	background: url("../img/delivery.png") no-repeat;
 }
 
@@ -841,6 +870,7 @@ body {
 .slider2-slide:nth-child(3)::after {	
 	background: url("../img/credit.png") no-repeat;		
 }
+
 
 .info {
 	display: flex;
